--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
 }
 
 .card{
+  height: 400px;
+  width: 500px;
   border: 4px solid #bb80f3;
   padding: 15px;
   box-shadow: 8px 8px blueviolet;
@@ -45,7 +47,7 @@ img{
 {
   color:aliceblue;
   text-decoration: none;
-  padding: 10px 50px;
+  padding: 10px 40px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size:20px;
 }
