--- a/photography_style.css
+++ b/photography_style.css
@@ -1,53 +1,132 @@
-body { 
+body {
+  font-family: "Lato", sans-serif;
+  margin: 0px;
+  background: linear-gradient(to right, #ef32d9, #89fffd);
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 38px;
+}
+
+.left-side {
+  display: flex;
+}
+
+.nav-wrapper > .left-side > div {
+  margin-right: 20px;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+}
+
+.nav-link-wrapper {
+  height: 22px;
+  border-bottom: 1px solid transparent;
+  transition: border-bottom 0.5s;
+}
+
+.active-nav-link {
+  border-bottom: 1px solid #8a8a8a;
+}
+
+.active-nav-link a {
+  color: #8a8a8a !important;
+}
+
+.nav-link-wrapper a {
+  color: aliceblue;
+  text-decoration: none;
+  transition: color 0.5s;
+}
+
+.nav-link-wrapper:hover {
+  border-bottom: 1px solid #8a8a8a;
+}
+
+.nav-link-wrapper a:hover {
+  color: #8a8a8a;
+}
+
+.portfolio-items-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.portfolio-item-wrapper {
+  position: relative;
+}
+
+.portfolio-img-background {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;  
+  height: 450px;
+  width: 100%;
+}
+
+.img-text-wrapper {
+  position: absolute;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  text-align: center;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.img-text-wrapper .subtitle {
+  transition: 1s;
+  color: transparent;
+}
+
+.image-blur {
+  transition: 1s;
+  filter: brightness(10%);
+}
+
+.img-text-wrapper:hover .logo-wrapper img {
+  opacity: 1;
+}
+
+.logo-wrapper img {
+  width: 50%;
+  margin-bottom: 20px;
+  opacity: 0;
+}
+
+.img-text-wrapper:hover .subtitle {
+  color: aqua;
+  font-weight: 600;
+}
+
+.two-column-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.card{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgba(255, 192, 203, 0.678);
-  background: linear-gradient(to right, #ef32d9, #89fffd);
-}
-
-.card{
+  color: pink;
   border: 4px solid #bb80f3;
-  padding: 15px;
+  padding: 10px;
   box-shadow: 8px 8px blueviolet;
   border-radius: 5px;
+  background: rgb(231, 145, 210);
 }
 
-.header_row li
-{
-  display: inline-block;
-  margin-top: 2px;
-  padding: 17px 0px;
-}
-
-.header_row li a
-{
-  color:aliceblue;
-  text-decoration: none;
-  padding: 10px 40px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size:20px;
-}
-
-.header_row li.row a
-{
-	border-bottom: 1px solid aliceblue;
-}
-
-.header_row li a:hover
-{
-  border-bottom: 1px solid aliceblue;
-  line-height: 0.5;
-}
-
-.rows {
-	display: flex;
-	padding-top: 3%;
-}
-
-.column {
-	flex: 33.33%;
-	padding: 5px;
+.brand{
+  color: aliceblue;
 }
